python/testData/highlighting/starInGenerator.py
y = (<error descr="can use starred expression only as assignment target">*()</error> for _ in ())